[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "esi-controls-async"
version = "0.0.3"
authors = [
  { name="Julian Day", email="julianfday@gmail.com" },
]
description = "Python API async client to the ESI Controls API for monitoring and controlling your thermostat."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
"Homepage" = "https://github.com/j-f-d/esi-controls-async"
"Bug Tracker" = "https://github.com/j-f-d/esi-controls-async/issues"